fix popup scroll bars

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,10 +10,13 @@
       <a class="title disabled" title="‒" id="title">‒</a>
     </span>
     <span>
-      <i class="fa fa-volume-mute fa-2x disabled" id="volume-icon"></i>
+      <button id="volume-icon" disabled>
+        <i class="fa fa-volume-mute fa-2x"></i>
+      </button>
       <input class="slider" type="range" min="0" max="100" value="0" id="volume-slider" disabled>
       <label class="text disabled" for="volume-slider" id="volume-text">‒%</label>
     </span>
+
     <span>
       <button id="play-prev" disabled>
         <i class="fa fa-fast-backward fa-2x"></i>
